Tray Icon Badgecheck Overlapping issue

--- a/bos/src/client/packages/panels/src/items/_tray.scss
+++ b/bos/src/client/packages/panels/src/items/_tray.scss
@@ -193,6 +193,7 @@ color:white;
     text-align: center;
     position: absolute;
     bottom: 5px;
+    z-index: 100;
 }
 
 .osjs-root[data-dir="rtl"] {
